Added tracking list in popup
Streamers can now be added and removed in the popup list.
Streamers are not checked currently and auth tokens are not currently tested on use.
Monitoring now automatically starts on popup open if the monitoring somehow hasn't already started.
Removed some unused files.
Renamed popup related files to something better than "hello"

--- a/manifest.json
+++ b/manifest.json
@@ -20,12 +20,6 @@
     "storage",
     "notifications"
   ],
-  "content_scripts": [
-    {
-      "matches": ["*://*.twitch.tv/*"],
-      "js": ["control-ward.js"]
-    }
-  ],
   "background": {
     "scripts": ["control-background.js"],
     "persistent": true,
@@ -36,6 +30,6 @@
       "48": "icons/border-48.png"
     },
     "default_title": "Hello?",
-    "default_popup": "popup/hello.html"
+    "default_popup": "popup/menu.html"
   }
 }
