--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 2,
   "name": "Control Ward",
-  "version": "1.0",
+  "version": "1.1",
 
   "description": "Notifies a user when selected Twitch streamers are live.",
 
@@ -10,8 +10,7 @@
   },
   "browser_specific_settings": {
     "gecko": {
-      "id": "control-ward@kitten.rs",
-      "strict_min_version": "49.0"
+      "id": "control-ward@kitten.rs"
     }
   },
   "permissions": [
